# word2vec_master

./: .gitignore  CMakeLists.txt  README.md  classes.txt  createKMeansClusters.sh  hierarchy.txt  mergedClasses.txt  oldClasses.txt  paths.txt  pathsSorted.txt  tree.txt
classes/: classes.txt  mergedClasses.txt  oldClasses.txt
data/: classes.sorted.txt  classes.txt
src/: CMakeLists.txt  WrapperW2V.cpp  WrapperW2V.h  main.cpp  makefile  w2v.cpp  w2v.h
vectors/: test-vector.txt
word2vecFiles/: distance.c
